Fixed navbar collapsed spacing

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,7 +1,3 @@
-#navbarSupportedContent > .ml-auto > li {
-	margin-left: 10px;
-}
-
 .hidden {
 	display: none;
 }
